--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -401,7 +401,29 @@ nav form input{
 }
 
 /* General Register/Login Styles  */
-#register .content, #login .content{
+.login{
+	width: 620px;
+	margin: 0 auto;
+}
+
+.login form{
+	width: 300px;
+	margin: 0 auto;
+}
+
+.login form input{
+	display: block;
+	width: 300px;
+	height: 36px;
+	margin: 10px 0;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	border: #E67E22 solid 1px;
+	padding-left: 10px;
+	
+}
+/* #register .content, #login .content{
 	width: 620px;
 	height: 375px;
 	margin: 0 auto;
@@ -430,12 +452,13 @@ nav form input{
 
 #register footer, #login footer{
 	margin: 90px 0 0 0;
-}
+} */
 
 /* Social Media Buttons */
 .sm-btns{
 	width: 460px;
 	margin: 0 auto;
+	padding: 30px 0 0 0;
 }
 
 .sm-btn{
@@ -505,91 +528,82 @@ nav form input{
 }
 
 /* Login */
-#login .content div:nth-child(2){
+.login div:nth-child(2){
 	text-align: center;
 	font-size: 12px;
 	margin-top: 20px;
 }
 
-#login .content div:nth-child(2) span{
+.login div:nth-child(2) span{
 	display: inline-block;
 	margin: 10px 0 0 0;
 }
 
-#login .content div:nth-child(2) span:before, #login .content div:nth-child(2) span:after{
+.login div:nth-child(2) span:before, .login div:nth-child(2) span:after{
 	border-top: 1px solid #C1C0AE;
 	display: block;
 	height: 1px;
 	content: " ";
 	width: 300px;
 	position: absolute;
-	left: 0;
-	top: 208px;
+	top: 180px;
 }
 
-#login .content div:nth-child(2) span:before{
-	left: 400px;
+.login div:nth-child(2) span:before{
+	left: 250px;
 	right: auto;
 }
 
-#login .content div:nth-child(2) span:after{
-	right: 400px;
+.login div:nth-child(2) span:after{
+	right: 250px;
 	left: auto;
 }
 
-#login .content form input:first-child{
+.login form{
+	padding: 20px 0 0 0;
+}
+
+
+.login form input:first-child{
 	background-image: url("../img/icons/username.png");
 	background-position: right center;
 	background-size: 30px 38px;
 	background-repeat: no-repeat;
 }
 
-#login .content form{
-	padding: 20px 0 0 0;
-}
-
-#login .content form input{
+.login form input{
 	background-image: url("../img/icons/password.png");
 	background-position: right center;
 	background-size: 30px 38px;
 	background-repeat: no-repeat;
 }
 
-#login .content form button{
+.login form button{
 	width: 100px;
 	height: 36px;
 	margin: 20px 0;
 } 
 
-#login .content form button a{
-	text-decoration: none;
-	margin: 0;
-	font-size: 20px;
-	color: #FFF;
-}
-
-#login .content form button a:hover{
-	color: #FFF;
-}
-
-#login .content form a{
+.login form a{
 	font-size: 12px;
 	margin: 0 0 0 70px;
+	text-decoration: none;
+	color: #000;
 }
 
-#login .content form a:hover{
+.login form a:hover{
 	color: #E67E22;
 	cursor: pointer;
 }
 
-#login .content div:nth-child(4){
+.login div:nth-child(4){
 	width: 640px;
 	border-top: solid 1px #C1C0AE;
 	margin-top: 20px;
 	text-align: center;
 }
 
-#login .content button:last-child{
+.login button:last-child{
 	width: 300px;
 	height: 35px;
 	line-height: 35px;
