--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -581,6 +581,11 @@ nav form input{
 	margin-top: 40px;
 }
 
+.login button:last-child a{
+	text-decoration: none;
+	color: #FFF;
+}
+
 /* Register*/
 .signup h1{
 	margin: 0 0 30px 0;
