--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1025,6 +1025,270 @@ nav form input{
 	color: #E67E22;
 }
 
+/* Breadcrumbs */
+.back-to-dash{
+	margin: 20px 5px;	
+	display: block;
+	text-decoration: none;
+	color: #2C3E50;
+	font-size: 14px;
+}
+
+.back-to-dash:hover{
+	color: #E67E22;
+}
+
+/* Study Deck Styles */
+.study-deck aside{
+	margin: 0 0 20px 0;
+	overflow: auto;
+	width: 220px;
+	background: #fff;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	float: left;
+}
+
+.study-deck .header{
+	overflow: auto;
+	background-color: #54544D;
+	color: #F2F2E2;
+	padding: 0 5px;
+}
+
+.study-deck .header h2{
+	margin: 0;
+	padding: 10px;
+	float: left;
+	font-size: 18px;
+	font-weight: 500;
+}
+
+.study-deck .header p{
+	float: right;
+	margin-right: 10px;
+	vertical-align: middle;
+	line-height: 100%;
+}
+
+.study-deck .header p img{
+	margin-right: 5px;
+}
+
+.study-deck .header:nth-child(3){
+	margin: 20px 0 0 0;
+}
+
+.sd-deck-info, .challenge, .quiz-stats{
+	padding: 0 10px;
+}
+
+.sd-deck-info a{
+	text-decoration: none;
+	color: #E67E22;
+	font-weight: 600;
+	font-size: 14px;
+}
+
+.sd-deck-info a:hover{
+	color: #34495E;
+}
+
+.sd-deck-info p{
+	font-size: 14px;
+	margin: 5px 0;
+}
+
+.sd-deck-info h3{
+	font-size: 18px;
+	margin: 20px 0 5px 0;
+}
+
+.sd-deck-info button{
+	width: auto;
+	height: auto;
+	font-size: 12px;
+	margin: 5px 0;
+	font-weight: 600;
+	letter-spacing: 1.3px;
+}
+
+.quiz-stats, .challenge{
+	font-size: 14px;
+}
+
+.quiz-stats h3{
+	font-size: 22px;
+	margin: 5px 0;
+}
+
+.quiz-stats a, .challenge a{
+	font-weight: 700;
+	text-decoration: none;
+	color: #E67E22;
+	font-size: 14px;
+}
+
+.quiz-stats a:hover, .challenge a:hover{
+	color: #34495E;
+}
+
+.study-content{
+	width: 700px;
+	float: right;
+	overflow: auto;
+}
+
+.study-content .header{
+	-webkit-border-top-left-radius: 03px;
+	-webkit-border-top-right-radius: 03px;
+	-moz-border-radius-topleft: 03px;
+	-moz-border-radius-topright: 03px;
+	border-top-left-radius: 03px;
+	border-top-right-radius: 03px;
+	height: 40px;
+}
+
+.study-content .header a{
+	text-decoration: none;
+	color: #FFF;
+/* 	font-weight: 300; */
+	line-height: 40px;
+	border-right: 1px solid #F2F2E2;
+	display: inline-block;
+	padding-right: 15px;
+	margin: 0 0 0 10px;
+	font-size: 14px;
+}
+
+.active-study-tab{
+	font-weight: 600;
+}
+
+.study-content button{
+	height: 25px;
+	width: auto;
+	font-size: 12px;
+	margin-left: 20px;
+}
+
+.study-content button:nth-child(2), .study-content button:nth-child(3){
+	background-color: #54544D;
+}
+
+/* NOT WORKING! */
+.card-sort-active button{
+	background-color: #2C3E50;
+}
+
+.study-content button:nth-child(6), .study-content button:nth-child(7){
+	float: right;
+	margin-right: 20px;
+}
+
+.study-content button:nth-child(7){
+	display: none;
+}
+
+.study-content input, .study-content label{
+	position: relative;
+	top: 2px;
+}
+.study-content input{
+	margin: 0 5px 0 20px;
+}
+
+.study-content label{
+	font-size: 14px;
+}
+
+
+.flash-card{
+	width: 515px;
+	overflow: hidden;
+	margin: 30px auto;
+}
+.card{
+	width: 449px;
+	height: 248px;
+	border: 1px solid #000;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-position-y: 30px;
+	float: left;
+	margin: 0 auto;
+	padding: 0;
+	display: table;
+}	
+
+.card p{
+	margin: 0 auto;
+	display: table-cell;
+	vertical-align: middle;
+	padding: 0 30px;
+	font-weight: 700;
+	font-size: 22px;
+	
+}
+
+.flash-card img{
+	float: left;
+	position: relative;
+	top: 115px;
+/* 	vertical-align: middle; */
+}
+
+.flash-card img:first-child{
+	margin-right: 20px;
+}
+
+.flash-card img:last-child{
+	margin-left: 20px;
+}
+
+.practice-more, .mastered, .flip{
+	clear: both;
+}
+
+.practice-more, .mastered{
+	width: 50px;
+	height: 40px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+
+.practice-more{
+	background-color: #951400;
+	background-image: url("../img/icons/practice_more.png");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 25px 25px;
+}
+
+.flip{
+	width: 60px;
+	height: 40px;
+	background-color: #E87C00;
+	background-image: url("../img/icons/flip.png");
+	background-position: center center;
+	background-size: 38px 31px;
+	background-repeat: no-repeat;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+}
+
+.mastered{
+	background-color: #009245;
+	background-image: url("../img/icons/mastered.png");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 31px 26px;
+}
+
+
 /* 	Footer 
 	-------------------
 	-------------------
