--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1331,6 +1331,182 @@ nav form input{
 }
 
 
+
+/* User Profile */
+.user-profile .content > a{
+	margin: 20px 0;	
+	display: block;
+	text-decoration: none;
+	color: #2C3E50;
+}
+
+.user-profile > a:hover{
+	color: 	#E67E22;
+}
+
+.user-profile aside{
+	width: 200px;
+	background: #FFF;
+	padding: 10px 10px;
+	overflow: hidden;
+	float: left;
+}
+
+.user-profile aside > p{
+	font-weight: 700;
+	font-size: 14px;
+}
+
+.user-profile aside > p span{
+	float: right;
+}
+
+.user-profile .level-progress{
+	width: 180px;
+}
+
+.user-profile .level-progress span:nth-child(4){
+	width: 38%;
+}
+
+.user-profile .level-progress span:nth-child(2) span{
+	width: 87%;
+}
+
+.friends-list h2{
+	float: left;
+	margin: 10px 0 20px; 0;
+	padding: 0;
+	
+}
+
+.friends-list h2:first-child{
+/* 	margin-right: 80px; */
+}
+
+.friend{
+	clear: both;
+	overflow: hidden;
+	padding: 0;
+	margin: 20px 0;
+/*
+	background-image: url("../img/icons/award.png");
+	background-size: 15px 15px;
+	background-repeat: no-repeat;
+	background-position: right center;
+*/
+	font-size: 12px;
+}
+
+.friend img{
+	float: left;
+}
+
+.friend h3{
+	font-weight: 600;
+	margin: 5px 0 0 20px;
+	display: inline-block;
+}
+
+.friend h3 a{
+	text-decoration: none;
+	color: #000;
+}
+
+.friend h3 a:hover{
+	color: #E67E22;
+}
+
+.friend p{
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+	margin: 5px 0 0 20px;
+}
+
+.friends-list p:last-child a{
+	float: right;
+	text-decoration: none;
+	color: #000;
+}
+
+.friends-list p:last-child a:hover{
+	color: #E67E22;
+}
+
+.profile{
+	overflow: hidden;
+	width: 700px;
+	background: #FFF;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	margin: 0;
+	float: right;
+}
+
+.user-info{
+	padding: 0 20px 20px 20px;
+}
+
+.user-info h2{
+	float: left;
+}
+
+.user-info button:nth-child(2){
+	width: 100px;
+	height: 30px;
+	font-size: 14px;
+	float: right;
+	margin: 20px 10px 0 0;
+}
+
+.user-info .your-decks{
+	clear: both;
+	overflow: hidden;
+}
+
+.user-info .your-decks .deck{
+	width: 300px;
+	margin-right: 30px;
+}
+
+.recent-activity h3{
+	margin-bottom: 0;
+}
+
+.recent-activity .activity{
+	overflow: hidden;
+	font-size: 14px;
+	padding: 0;
+	margin: 0;
+	border-bottom: #666659 solid 1px;
+	padding: 10px 0;
+}
+
+.recent-activity .activity:last-child{
+	border: none;
+}
+
+.recent-activity .activity p:first-child{
+	float: left;
+}
+
+.recent-activity .activity p:last-child{
+	float: right;
+}
+
+.recent-activity .activity a{
+	text-decoration: none;
+	color: #34495E;
+	font-weight: 700;
+}
+
+.recent-activity .activity a:hover{
+	color: #E67E22;
+}
+
+
 /* 	Footer 
 	-------------------
 	-------------------
