[#51368563] - Logged in header styles worked on, drop down menu anchors corrected using Fuel html class

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -255,7 +255,7 @@ nav form input{
 	margin-right: 10px;
 }
 
-.user-dd ul{
+.dd-menu{
 	display: none;
 	background-color: #2C3E50;
 	-webkit-border-bottom-right-radius: 3px;
@@ -264,17 +264,23 @@ nav form input{
 	-moz-border-radius-bottomleft: 3px;
 	border-bottom-right-radius: 3px;
 	border-bottom-left-radius: 3px;
+	border: none;
 	margin: 0;
 	padding: 0;
-	position: relative;
+	position: absolute;
+/* 	position: relative; */
+	width: 100px;
 	z-index: 1;
 }
 
-.user-dd ul li{
-	font-size: 14px;
+.dd-menu a{
+/* 	font-size: 14px; */
+	font-weight: 200;
+/* 	padding: 20px; */
+	border: none;
 }
 
-.user-dd ul li:hover{
+.dd-menu a:hover{
 	background: #34495E;
 }
 
