[#51368567] - Rotate plugin added and flip functionality added to flash card when clicked on.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1370,8 +1370,12 @@ nav form input{
 	width: 180px;
 }
 
+.user-profile .level-progress span{
+	margin: 0;
+}
+
 .user-profile .level-progress span:nth-child(4){
-	width: 38%;
+	width: 28%;
 }
 
 .user-profile .level-progress span:nth-child(2) span{
