Testing new folder structure

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,6 +11,8 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+/*hello world*/
+
 html,
 button,
 input,
