Global navigation fixed to load the user profile picture if they are logged in, also padding next to profile image fixed.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -208,6 +208,10 @@ nav{
 	border-right: #3B97D2 1px solid;
 }
 
+.logged-in .globe-nav:nth-child(3) img{
+	padding-right: 5px;
+}
+
 .logged-out .globe-nav:nth-child(2){
 	border-right: #3B97D2 1px solid;
 }
