[#52031901] - Landing page CTA search height adjusted

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -259,9 +259,9 @@ nav input{
 
 
 .cta-search{
-	height: 200px;
-	margin-top: 50px;
-	margin-bottom: 50px;
+	height: 300px;
+	padding-top: 90px;
+	margin-bottom: 10px;
 }
 
 .cta-search h1{
